--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "nodeunit": "^0.11.3"
+    "@types/node": "^22.0.0",
+    "nodeunit": "^0.11.3",
+    "typescript": "^5.5.4"
   }
 }
