--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/hexparrot/mineos-node",
   "scripts": {
     "start": "node webui.js",
-    "test": "nodeunit ./test"
+    "test": "jest"
   },
   "dependencies": {
     "adm-zip": "^0.4.11",
@@ -29,6 +29,7 @@
     "angular-translate": "^2.18.2",
     "apache-crypt": "1.1.x",
     "async": "1.5.x",
+    "authenticate-pam": "^1.0.5",
     "axios": "^0.24.0",
     "bindings": "1.5.0",
     "body-parser": "^1.19.0",
@@ -84,8 +85,25 @@
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "@jest/globals": "^29.7.0",
+    "@types/async": "^3.2.24",
+    "@types/compression": "^1.7.5",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/fs-extra": "^11.0.4",
+    "@types/ini": "^4.1.1",
+    "@types/method-override": "^0.0.35",
     "@types/node": "^22.0.0",
+    "@types/passport": "^1.0.16",
+    "@types/socket.io": "^3.0.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.8.0",
+    "jest": "^29.7.0",
     "nodeunit": "^0.11.3",
-    "typescript": "^5.5.4"
+    "ts-jest": "^29.2.3",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^7.18.0"
   }
 }
