--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "angular-sanitize": "1.5.x",
     "angular-translate": "^2.18.2",
     "apache-crypt": "1.1.x",
-    "async": "1.5.x",
+    "async": "^3.2.5",
     "authenticate-pam": "^1.0.5",
     "axios": "^0.24.0",
     "bindings": "1.5.0",
@@ -64,7 +64,6 @@
     "passport.socketio": "3.6.x",
     "posix": "^4.2.0",
     "procfs-stats": "1.0.x",
-    "q": "1.4.x",
     "request": "^2.88.0",
     "request-progress": "0.3.x",
     "rsync": "0.6.x",
@@ -75,13 +74,14 @@
     "tar": "^4.4.18",
     "tarball-extract": "0.0.3",
     "tmp": "0.0.33",
+    "ts-node": "^10.9.2",
     "unzipper": "0.10.11",
     "urllib": "^2.34.1",
     "userid": "1.0.0-beta.9",
     "uuid": "3.0.x",
-    "which": "1.2.x",
+    "which": "^4.0.0",
     "whoami": "0.0.x",
-    "winston": "1.1.x",
+    "winston": "^3.13.1",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
@@ -97,11 +97,13 @@
     "@types/node": "^22.0.0",
     "@types/passport": "^1.0.16",
     "@types/socket.io": "^3.0.1",
+    "@types/which": "^3.0.4",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.8.0",
     "jest": "^29.7.0",
     "nodeunit": "^0.11.3",
+    "prettier": "^3.3.3",
     "ts-jest": "^29.2.3",
     "typescript": "^5.5.4",
     "typescript-eslint": "^7.18.0"
