--- a/package.json
+++ b/package.json
@@ -98,8 +98,11 @@
     "@types/passport": "^1.0.16",
     "@types/socket.io": "^3.0.1",
     "@types/which": "^3.0.4",
+    "@typescript-eslint/parser": "^8.0.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-autofix": "^2.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "globals": "^15.8.0",
     "jest": "^29.7.0",
     "nodeunit": "^0.11.3",
