--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@eslint/js": "^9.8.0",
     "@jest/globals": "^29.7.0",
     "@types/async": "^3.2.24",
+    "@types/axios": "^0.9.36",
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
@@ -96,6 +97,7 @@
     "@types/method-override": "^0.0.35",
     "@types/node": "^22.0.0",
     "@types/passport": "^1.0.16",
+    "@types/request": "^2.48.12",
     "@types/socket.io": "^3.0.1",
     "@types/which": "^3.0.4",
     "@typescript-eslint/parser": "^8.0.1",
