--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "url": "https://github.com/hexparrot/mineos-node/issues"
   },
   "homepage": "https://github.com/hexparrot/mineos-node",
+  "type": "module",
   "scripts": {
     "start": "node webui.js",
     "test": "jest"
