--- a/package.json
+++ b/package.json
@@ -46,12 +46,13 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "fireworm": "0.7.x",
-    "fs-extra": "5.0.x",
+    "fs-extra": "^11.2.0",
     "ini": "^1.3.6",
     "introspect": "0.0.x",
     "lazylines": "1.0.0",
     "line-by-line": "^0.1.6",
     "mcquery": "0.2.x",
+    "memoize": "^10.0.0",
     "method-override": "^2.3.10",
     "moment": "2.21.x",
     "moment-duration-format": "1.3.x",
@@ -98,6 +99,7 @@
     "@types/method-override": "^0.0.35",
     "@types/node": "^22.0.0",
     "@types/passport": "^1.0.16",
+    "@types/procfs-stats": "^1.0.5",
     "@types/request": "^2.48.12",
     "@types/socket.io": "^3.0.1",
     "@types/which": "^3.0.4",
