--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,9 @@
 {
+  "semi": true,
   "tabWidth": 2,
   "useTabs": false,
-  "singleQuote": true
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "printWidth": 120,
+  "bracketSpacing": true
 }
